--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A schedule booking widget",
   "main": "fl-booking-js",
   "scripts": {
+    "postinstall": "grunt postinstall",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "bower": "^1.7.7",
-    "grunt": "^0.4.5"
+    "child-process-promise": "^1.1.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.0"
   }
 }
