--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "child-process-promise": "^1.1.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-uglify": "^0.11.1",
     "ncp": "^2.0.0"
   }
 }
