--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "author": "lazamar @ FourLabs",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.15.2",
     "child-process-promise": "^1.1.0",
+    "express": "^4.14.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
