--- a/package.json
+++ b/package.json
@@ -16,12 +16,37 @@
   "author": "lazamar @ FourLabs",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-lodash": "^3.2.9",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-es2017": "^6.16.0",
     "body-parser": "^1.15.2",
     "child-process-promise": "^1.1.0",
     "express": "^4.14.0",
+    "fl-assert": "^1.0.10",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
-    "ncp": "^2.0.0"
+    "gulp": "^3.9.1",
+    "gulp-exec": "^2.1.2",
+    "gulp-flatmap": "^1.0.0",
+    "gulp-organiser": "^1.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-run-sequence": "^0.3.2",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "ncp": "^2.0.0",
+    "path": "^0.12.7",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-stream": "^1.14.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "timekit-booking": "git+https://github.com/timekit-io/booking-js.git#ba65c03"
   }
 }
