--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A schedule booking widget",
   "main": "fl-booking-js",
   "scripts": {
-    "postinstall": "grunt postinstall",
-    "build": "grunt build",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -23,9 +22,6 @@
     "child-process-promise": "^1.1.0",
     "express": "^4.14.0",
     "fl-assert": "^1.0.10",
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^1.0.0",
-    "grunt-contrib-uglify": "^0.11.1",
     "gulp": "^3.9.1",
     "gulp-exec": "^2.1.2",
     "gulp-flatmap": "^1.0.0",
