--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "path": "^0.12.7",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-json": "^2.0.2",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-stream": "^1.14.0",
