--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-es2017": "^6.16.0",
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.17.5",
     "child-process-promise": "^1.1.0",
+    "dep-linker": "^1.0.24",
     "express": "^4.14.0",
     "fl-assert": "^1.0.10",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-exec": "^2.1.2",
     "gulp-flatmap": "^1.0.0",
     "gulp-organiser": "^1.0.6",
@@ -32,6 +35,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
+    "lodash": "^4.16.6",
     "ncp": "^2.0.0",
     "path": "^0.12.7",
     "rollup-plugin-babel": "^2.6.1",
