--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-uglify": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
     "lodash": "^4.16.6",
     "ncp": "^2.0.0",
