--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "fl-booking-js",
   "scripts": {
     "build": "gulp build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp karma-test"
   },
   "keywords": [
     "booking",
