--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
     "lodash": "^4.16.6",
     "ncp": "^2.0.0",
     "path": "^0.12.7",
